# PhishGuard

./: README.md  email_analysis_report.txt  phishguard.py  pyproject.toml
